Fixed atom size on small screens

--- a/_compass/screen.scss
+++ b/_compass/screen.scss
@@ -138,7 +138,7 @@ dd {
 li {
     background-image: url(/images/atom.png);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: auto rhythm(1);
     padding-left: rhythm(1.25);
     margin-bottom: rhythm(0.5);
 }
